# rust-aws-logs

./: Cargo.toml  README.md  copy_deploy.sh  example_command.txt
src/: main.rs
