[package]
name = "rust-aws-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.1"
aws-sdk-cloudwatchlogs = "1.3.0"
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.3.4", features = ["full"] }

[[bin]]
name = "alog"
path = "src/main.rs"
