[package]
name = "rust-aws-logs"
version = "0.9.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.1"
aws-sdk-cloudwatchlogs = "1.33.0"
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.3.4", features = ["full"] }

[[bin]]
name = "alog"
path = "src/main.rs"
